--- a/Progressreport.Rmd
+++ b/Progressreport.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Progress Report"
 author: "Zohreh Sharafian"
-date: "March 19, 2018"
+date: "March 19,2018"
 output: github_document
 ---
 
